mType/tests/testFiles/cast/pass/genericTypeParameterCast.mt
// Placeholder
print("Generic type parameter cast");
// Expected output:
// Generic type parameter cast
