mType/tests/testFiles/cast/error/nullToPrimitiveCast.mt
// Error: Cannot cast null to primitive type
int x = (int)null;
